replace collect(toList()) with toList()